--- a/00-preparation/00-rstudio-github/00-rstudio-github.html
+++ b/00-preparation/00-rstudio-github/00-rstudio-github.html
@@ -69,6 +69,24 @@ class: center, middle, inverse, title-slide
 - **verification**: say hello on a GitHub issue
 
 ---
+class: inverse
+
+# Questions? Problenms?
+
+--
+## If **you** are a part of Uncoast Unconf 2019:
+
+--
+### Check then, create a new GitHub issue:
+
+-`https://github.com/uncoast-unconf/uu-2019-day-zero/issues`
+
+--
+## OR
+
+### Email Ian Lyttle at ian [dot] lyttle [at] se [dot] com
+
+---
 class: inverse, center, middle
 
 # Thanks, see you next week!
