--- a/00-preparation/00-rstudio-github/00-rstudio-github.html
+++ b/00-preparation/00-rstudio-github/00-rstudio-github.html
@@ -71,7 +71,7 @@ class: center, middle, inverse, title-slide
 ---
 class: inverse
 
-# Questions? Problenms?
+# Questions? Problems?
 
 --
 ## If **you** are a part of Uncoast Unconf 2019:
