--- a/00-preparation/00-rstudio-github/00-rstudio-github.html
+++ b/00-preparation/00-rstudio-github/00-rstudio-github.html
@@ -64,7 +64,7 @@ class: center, middle, inverse, title-slide
 ### GitHub
 
 - do you have an account? 
-- if neded, let's get one
+- if needed, let's get one
 - do you have access to your login credentials?
 - **verification**: say hello on a GitHub issue
 
