--- a/00-preparation/01-r-git/r-git-macos.html
+++ b/00-preparation/01-r-git/r-git-macos.html
@@ -30,6 +30,12 @@ class: center, middle, inverse, title-slide
 
 ### This week: R and git installation
 
+--
+
+### Reference: *Happy Git and GitHub for the useR*, Jenny Bryan et al.
+
+### https://happygitwithr.com/
+
 ---
 class: inverse
 
@@ -149,7 +155,8 @@ class: inverse, center, middle
 <script>var slideshow = remark.create({
 "highlightStyle": "github",
 "highlightLines": true,
-"countIncrementalSlides": false
+"countIncrementalSlides": false,
+"ratio": "16:9"
 });
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
