Update week-1 slides

--- a/00-preparation/01-r-git/r-git-macos.html
+++ b/00-preparation/01-r-git/r-git-macos.html
@@ -12,7 +12,7 @@
 class: center, middle, inverse, title-slide
 
 # Uncoast Unconf Preparation
-## R and git: MacOS
+## R and git: macOS
 ### 2019-03-24
 
 ---
@@ -31,6 +31,8 @@ class: center, middle, inverse, title-slide
 ### This week: R and git installation
 
 --
+
+### Links are on the page hosting this video
 
 ### Reference: *Happy Git and GitHub for the useR*, Jenny Bryan et al.
 
@@ -85,21 +87,26 @@ R.version.string
 --
 
 ```
-## [1] "R version 3.5.3 (2019-03-22)"
+## [1] "R version 3.5.3 (2019-03-11)"
 ```
 
 - if you have R 3.5.3, **you're done!** 
 
 --
 
-- if not at least 3.4, update (you might want to update anyway)
-  - if you update more than a minor version, e.g. 3.4 -&gt; 3.5, you have to reinstall your R packages
+- if you have 3.4 &lt;= R &lt;= 3.5.2, up to you...
+
+--
+
+- if you have R &lt; 3.4, **please update!**
 
 --
   
-- To install:
-  - go to [this CRAN page](https://cloud.r-project.org/)
+- to get the latest version of R:
+  - go to [https://cloud.r-project.org/](https://cloud.r-project.org/)
   - follow the *Download and Install R* link for macOS
+
+- if you update more than a minor version, e.g. 3.4 -&gt; 3.5, you have to reinstall your R packages
 
 ---
 
@@ -109,7 +116,7 @@ R.version.string
 
 - do you have git installed? In the **Terminal** pane:
 
-```
+```bash
 git --version
 ```
 
