Update week-3 slides

--- a/00-preparation/02-devtools-rtools/00-review-devtools.html
+++ b/00-preparation/02-devtools-rtools/00-review-devtools.html
@@ -25,6 +25,8 @@ class: inverse
 
 ### Review
 
+- We want to be ready to collaborate when we get to Des Moines!
+
 - If you're happy with your setup, no need to do anything.
 
 - Reference: [Happy Git and GitHub for the useR](https://happygitwithr.com/), by Jenny Bryan et al.
@@ -33,14 +35,18 @@ class: inverse
 
 - If you have any questions:
 
-  - you can file a [GitHub issue](https://github.com/uncoast-unconf/uu-2019-day-zero/issues/12) 
-  - you can email me at ian [dot] lyttle [at] se [dot] com
+  - you can file a [GitHub issue](https://github.com/uncoast-unconf/uu-2019-day-zero/issues/12), or email ian [dot] lyttle [at] se [dot] com
 
---
+---
+class: inverse
+
+## Welcome Back!
+
+### Review
 
 #### Week of March 17
 
-- RStudio IDE: version &gt; 1.2
+- RStudio IDE: version &amp;ge; 1.2
 
 --
 
@@ -69,7 +75,7 @@ git --version
 
 - R: 
 
-  - Using the **Console** pane, confirm version &gt; 3.4
+  - Using the **Console** pane, confirm version &amp;ge; 3.4
 
 ```r
 R.version.string
@@ -79,15 +85,15 @@ R.version.string
 
 ## devtools
 
-- For building and working with packages, the [devtools](https://devtools.r-lib.org/) package makes our lives a lot easier
+- For building and installing packages, the [devtools](https://devtools.r-lib.org/) package makes our lives a lot easier.
 
-- These are the tools that the Tidyverse team use themselves.
+- Tidyverse team use these tools themselves.
 
 --
 
 ### Spoiler alert
 
-On macOS, this should *just work*.
+On macOS, everything should *just work*.
  
 On Windows, you may have to install Rtools. (Sorry!)
 
@@ -117,11 +123,13 @@ devtools::has_devel(debug = TRUE)
 
 If this returns silently, **you're OK**.
 
-**Windows:** if you don't have Rtools, devtools will install it for you - please let it.
+**Windows:** 
+
+- if you don't have Rtools, devtools will install it for you - please let it.
 
 --
 
-**Windows:** when it's done installing, try again.
+- when it's done installing, try again.
 
 ```r
 devtools::has_devel(debug = TRUE)
@@ -144,16 +152,22 @@ devtools::install_github("r-lib/usethis", force = TRUE)
 
 --
 
-If this returns without error, **you're done** for the week.
+This *should* return without error; **you're done** for the week.
+
+--
+
+- if it returns with an error, let me know!
 
 ---
 class: inverse
 
 ## Next week (one more week!)
 
-- Get everything configured
+- Finalize git &amp; GitHub configuration
 
-- Verify it works
+--
+
+- Verify it all works
 
 --
 
@@ -163,8 +177,7 @@ class: inverse
 
 - If you have any questions:
 
-  - you can file a [GitHub issue](https://github.com/uncoast-unconf/uu-2019-day-zero/issues/12) 
-  - you can email me at ian [dot] lyttle [at] se [dot] com
+  - you can file a [GitHub issue](https://github.com/uncoast-unconf/uu-2019-day-zero/issues/12) or email ian [dot] lyttle [at] se [dot] com
 
 --
 
