Tweak some points

--- a/00-preparation/03-usethis/00-usethis.html
+++ b/00-preparation/03-usethis/00-usethis.html
@@ -60,11 +60,13 @@ If you haven't gone through the past three weeks, please do so.
 
 - Just had a CRAN release (thanks to Jenny Bryan and her coworkers for the excellent timing)! 
 
+- This week, everything in the Console pane:
+
 ```r
-install.packages("usethis")
+install.packages(c("usethis", "reprex"))
 ```
 
-You may wish to load the package for the next few steps:
+- You may wish to load the package for the next few steps:
 
 ```r
 library("usethis")
@@ -247,6 +249,8 @@ browse_github_pat(description = "your-custom-name-here")
 
 --
 
+- Make sure `.Renviron` ends with a newline!
+
 - Restart your R session.
 
 ---
@@ -317,6 +321,10 @@ usethis::edit_r_profile()
 
 - If you don't have a `.Rprofile` file (it opens empty), here's a [starter](https://gist.github.com/ijlyttle/dee4a89c8528cd4a0a319bb7b8cdd51a).
 
+  
+- Make sure `.Rprofile` ends with a newline!
+
+
 - When you're done editing `.Rprofile`, save it, then restart R.
 
 ---
@@ -373,7 +381,7 @@ git_sitrep()
 ---
 class: inverse
 
-### 🎈 🎉 We have finished our preparations! 🎈 🥳
+### 🥳 🎈 We have finished our preparations! 🎂 🎉
 
 --
 
@@ -387,9 +395,7 @@ class: inverse
 
 --
 
-### See you in Des Moines! 🚗 ✈️ 
-
----
+### See you in Des Moines! 🚗 ✈️
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
