Add teach-left, teach-right css classes

--- a/03-packages/package-development.html
+++ b/03-packages/package-development.html
@@ -6,6 +6,7 @@
     <meta name="date" content="2019-04-14" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
+    <link rel="stylesheet" href="extra.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -22,15 +23,13 @@ class: center, middle, inverse, title-slide
 
 ## Base process
 
-![](workspace/img-verbs/base.png)
+&lt;img src="workspace/img-verbs/base.png" width="75%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 ## End Result
 
 .pull-right[ 
-&lt;!-- ![](workspace/img-nouns/all.png) --&gt;
-
 &lt;img src="workspace/img-nouns/all.png" width="50%" style="display: block; margin: auto 0 auto auto;" /&gt;
 ]
 
@@ -38,31 +37,38 @@ class: center, middle, inverse, title-slide
 
 ## Package framework
 
-![](workspace/img-verbs/framework.png)
+&lt;img src="workspace/img-verbs/framework.png" width="75%" style="display: block; margin: auto;" /&gt;
+
 
 ---
 
 ## Develop
 
-![](workspace/img-verbs/develop.png)
+&lt;img src="workspace/img-verbs/develop.png" width="75%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 ## Test
 
-![](workspace/img-verbs/test.png)
+&lt;img src="workspace/img-verbs/test.png" width="75%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 ## Document
 
-![](workspace/img-verbs/document.png)
+&lt;img src="workspace/img-verbs/document.png" width="75%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 ## Summary
 
-![](workspace/img-verbs/all.png)
+.teach-left[
+&lt;img src="workspace/img-verbs/all.png" width="3299" style="display: block; margin: auto auto auto 0;" /&gt;
+]
+
+.teach-right[ 
+&lt;img src="workspace/img-nouns/all.png" width="824" style="display: block; margin: auto 0 auto auto;" /&gt;
+]
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
