--- a/03-packages/package-development.html
+++ b/03-packages/package-development.html
@@ -23,40 +23,93 @@ class: center, middle, inverse, title-slide
 
 ## Base process
 
-&lt;img src="workspace/img-verbs/base.png" width="75%" style="display: block; margin: auto;" /&gt;
+.teach-left[
+&lt;img src="workspace/img-verbs/base.png" width="3299" style="display: block; margin: auto auto auto 0;" /&gt;
+]
 
----
+--
 
-## End Result
-
-.pull-right[ 
-&lt;img src="workspace/img-nouns/all.png" width="50%" style="display: block; margin: auto 0 auto auto;" /&gt;
+.teach-right[ 
+&lt;img src="workspace/img-nouns/prelim.png" width="824" style="display: block; margin: auto 0 auto auto;" /&gt;
 ]
 
 ---
 
-## Package framework
+## Base process
 
-&lt;img src="workspace/img-verbs/framework.png" width="75%" style="display: block; margin: auto;" /&gt;
+.teach-left[
+&lt;img src="workspace/img-verbs/base.png" width="3299" style="display: block; margin: auto auto auto 0;" /&gt;
+]
 
+
+.teach-right[ 
+&lt;img src="workspace/img-nouns/all.png" width="824" style="display: block; margin: auto 0 auto auto;" /&gt;
+]
+
+---
+
+## Create package
+
+.teach-left[
+&lt;img src="workspace/img-verbs/create-package.png" width="3299" style="display: block; margin: auto auto auto 0;" /&gt;
+]
+
+
+.teach-right[ 
+&lt;img src="workspace/img-nouns/create-package.png" width="824" style="display: block; margin: auto 0 auto auto;" /&gt;
+]
+
+---
+
+## Create framework
+
+.teach-left[
+&lt;img src="workspace/img-verbs/framework.png" width="3299" style="display: block; margin: auto auto auto 0;" /&gt;
+]
+
+
+.teach-right[ 
+&lt;img src="workspace/img-nouns/framework.png" width="821" style="display: block; margin: auto 0 auto auto;" /&gt;
+]
 
 ---
 
 ## Develop
 
-&lt;img src="workspace/img-verbs/develop.png" width="75%" style="display: block; margin: auto;" /&gt;
+.teach-left[
+&lt;img src="workspace/img-verbs/develop.png" width="3299" style="display: block; margin: auto auto auto 0;" /&gt;
+]
+
+
+.teach-right[ 
+&lt;img src="workspace/img-nouns/develop.png" width="824" style="display: block; margin: auto 0 auto auto;" /&gt;
+]
 
 ---
 
 ## Test
 
-&lt;img src="workspace/img-verbs/test.png" width="75%" style="display: block; margin: auto;" /&gt;
+.teach-left[
+&lt;img src="workspace/img-verbs/test.png" width="3299" style="display: block; margin: auto auto auto 0;" /&gt;
+]
+
+
+.teach-right[ 
+&lt;img src="workspace/img-nouns/test.png" width="824" style="display: block; margin: auto 0 auto auto;" /&gt;
+]
 
 ---
 
 ## Document
 
-&lt;img src="workspace/img-verbs/document.png" width="75%" style="display: block; margin: auto;" /&gt;
+.teach-left[
+&lt;img src="workspace/img-verbs/document.png" width="3299" style="display: block; margin: auto auto auto 0;" /&gt;
+]
+
+
+.teach-right[ 
+&lt;img src="workspace/img-nouns/document.png" width="824" style="display: block; margin: auto 0 auto auto;" /&gt;
+]
 
 ---
 
